--- a/Headlines/Base.lproj/Main.storyboard
+++ b/Headlines/Base.lproj/Main.storyboard
@@ -79,6 +79,7 @@
                                     <outlet property="categoryLabel" destination="YfZ-NN-JwR" id="ZLL-1u-u9Q"/>
                                     <outlet property="dateLabel" destination="5YR-5C-ir4" id="Yrd-77-xXz"/>
                                     <outlet property="mainLabel" destination="pku-QZ-8eh" id="zsd-3T-gpq"/>
+                                    <segue destination="gVy-xW-lPm" kind="show" id="G7m-f8-E8g"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -92,6 +93,109 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="52M-54-X7Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1279" y="203"/>
+        </scene>
+        <!--Article Detail Collection View Controller-->
+        <scene sceneID="Zhq-ES-7MS">
+            <objects>
+                <collectionViewController id="gVy-xW-lPm" customClass="ArticleDetailCollectionViewController" customModule="Headlines" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" id="7UH-Sa-oqp">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="35Z-qx-QZG">
+                            <size key="itemSize" width="600" height="538"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ArticleDetailCell" id="c1G-1y-saN" customClass="ArticleDetailCollectionViewCell" customModule="Headlines" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="63" width="600" height="538"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="538"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cij-CO-SlM">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="538"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Jj-l4-igw">
+                                                    <rect key="frame" x="0.0" y="0.0" width="600" height="298"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f25-xF-pOQ">
+                                                            <rect key="frame" x="0.0" y="0.0" width="600" height="223"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="223" id="F9n-ur-Zm7"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eJY-Ji-2kj">
+                                                            <rect key="frame" x="8" y="231" width="584" height="30"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" priority="100" constant="51" id="9QO-La-GVU"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jpi-be-wHB">
+                                                            <rect key="frame" x="8" y="269" width="584" height="21"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" priority="250" constant="75" id="Dgt-Ul-QeM"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" priority="250" constant="352" id="2AS-Ts-lNa"/>
+                                                        <constraint firstItem="f25-xF-pOQ" firstAttribute="leading" secondItem="5Jj-l4-igw" secondAttribute="leading" id="2mh-7q-TRK"/>
+                                                        <constraint firstAttribute="trailing" secondItem="f25-xF-pOQ" secondAttribute="trailing" id="BeN-Qn-AkY"/>
+                                                        <constraint firstItem="jpi-be-wHB" firstAttribute="top" secondItem="eJY-Ji-2kj" secondAttribute="bottom" constant="8" id="Jh8-lS-fE8"/>
+                                                        <constraint firstAttribute="trailing" secondItem="eJY-Ji-2kj" secondAttribute="trailing" constant="8" id="T36-rm-5iS"/>
+                                                        <constraint firstAttribute="trailing" secondItem="jpi-be-wHB" secondAttribute="trailing" constant="8" id="Xji-0T-HhO"/>
+                                                        <constraint firstAttribute="bottom" secondItem="jpi-be-wHB" secondAttribute="bottom" constant="8" id="ZFm-lw-Agi"/>
+                                                        <constraint firstItem="f25-xF-pOQ" firstAttribute="top" secondItem="5Jj-l4-igw" secondAttribute="top" id="arn-jn-pWO"/>
+                                                        <constraint firstItem="eJY-Ji-2kj" firstAttribute="top" secondItem="f25-xF-pOQ" secondAttribute="bottom" constant="8" id="don-ar-z8q"/>
+                                                        <constraint firstItem="jpi-be-wHB" firstAttribute="leading" secondItem="5Jj-l4-igw" secondAttribute="leading" constant="8" id="e9Q-xg-hP1"/>
+                                                        <constraint firstItem="jpi-be-wHB" firstAttribute="top" secondItem="eJY-Ji-2kj" secondAttribute="bottom" constant="8" id="fAd-LF-Kbe"/>
+                                                        <constraint firstItem="eJY-Ji-2kj" firstAttribute="leading" secondItem="5Jj-l4-igw" secondAttribute="leading" constant="8" id="z2J-N2-XuF"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="5Jj-l4-igw" firstAttribute="top" secondItem="cij-CO-SlM" secondAttribute="top" id="Gv4-aE-bAQ"/>
+                                                <constraint firstItem="5Jj-l4-igw" firstAttribute="width" secondItem="cij-CO-SlM" secondAttribute="width" id="Yem-Wj-FtD"/>
+                                                <constraint firstAttribute="bottom" secondItem="5Jj-l4-igw" secondAttribute="bottom" constant="186" id="akZ-Uv-Xg8"/>
+                                                <constraint firstItem="5Jj-l4-igw" firstAttribute="leading" secondItem="cij-CO-SlM" secondAttribute="leading" id="dHN-fh-dBg"/>
+                                                <constraint firstAttribute="trailing" secondItem="5Jj-l4-igw" secondAttribute="trailing" id="x3d-3J-umt"/>
+                                            </constraints>
+                                        </scrollView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="cij-CO-SlM" secondAttribute="bottom" id="ci5-z8-7ve"/>
+                                    <constraint firstItem="cij-CO-SlM" firstAttribute="leading" secondItem="c1G-1y-saN" secondAttribute="leading" id="hFg-qz-PZw"/>
+                                    <constraint firstAttribute="trailing" secondItem="cij-CO-SlM" secondAttribute="trailing" id="hHR-mp-6Ot"/>
+                                    <constraint firstItem="cij-CO-SlM" firstAttribute="top" secondItem="c1G-1y-saN" secondAttribute="top" id="yal-UF-w8c"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="articleImageView" destination="f25-xF-pOQ" id="zKI-3m-RuX"/>
+                                    <outlet property="bodyLabel" destination="jpi-be-wHB" id="Exu-bO-fzU"/>
+                                    <outlet property="titleLabel" destination="eJY-Ji-2kj" id="wQR-YZ-3Cl"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="gVy-xW-lPm" id="Bbl-BE-jo2"/>
+                            <outlet property="delegate" destination="gVy-xW-lPm" id="S6K-zu-45T"/>
+                        </connections>
+                    </collectionView>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qQU-E0-y05" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1978" y="197"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ehP-3S-C9l">
